@@ -1,9 +1,10 @@
 package main.handlers;
 
 import com.sun.net.httpserver.HttpHandler;
+import main.types.Log;
+import org.json.JSONArray;
 import org.json.JSONObject;
 
-import javax.xml.bind.DatatypeConverter;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
@@ -11,6 +12,7 @@ import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Base64;
 import java.util.Random;
 
 public class FilePostHandler extends HandlerPrototype implements HttpHandler {
@@ -27,19 +29,29 @@ public class FilePostHandler extends HandlerPrototype implements HttpHandler {
         String dataFileName = writeImageToFile(imgBlobString);
         String scriptPath = System.getProperty("user.home");
         //Create invoke command for python script with image encoding as command line arg
-        ProcessBuilder pb = new ProcessBuilder("python", scriptPath + "/csv.py", dataFileName);
+        //ProcessBuilder pb = new ProcessBuilder("python", scriptPath + "/img-ocr.py", dataFileName);
         try {
             //Invoke python script
-            Process p = pb.start();
-            BufferedReader pyIn = new BufferedReader(new InputStreamReader(p.getInputStream()));
+            //Process p = pb.start();
+            //BufferedReader pyIn = new BufferedReader(new InputStreamReader(p.getInputStream()));
             StringBuilder csvString = new StringBuilder();
-            String csvLine = null;
+            String csvLine = "";
             //Read script return
-            while((csvLine = pyIn.readLine()) != null) {
+            //p.waitFor();
+            //while((csvLine = pyIn.readLine()) != null) {
+                System.out.println(csvLine);
                 csvString.append(csvLine);
-            }
+            //}
+            //TODO: remove before commit
             JSONObject csvStrObj = new JSONObject();
-            csvStrObj.put("csvStr", csvString.toString());
+            JSONArray classRecordArray = new JSONArray();
+            JSONObject classRecord = new JSONObject();
+            classRecord.put("classname", "Math");
+            classRecord.put("year", 1998);
+            classRecord.put("finalgrade", "A+");
+            classRecord.put("credits", 2);
+            classRecordArray.put(classRecord);
+            csvStrObj.put("classRecords", classRecordArray);
             returnActionSuccess(csvStrObj);
         } catch (Exception ex) {
             ex.printStackTrace();
@@ -55,12 +67,12 @@ public class FilePostHandler extends HandlerPrototype implements HttpHandler {
      */
     private String writeImageToFile(String imgStr){
         //Get the image base 64 encoding and convert to image byte array
-        byte imgData[] = DatatypeConverter.parseBase64Binary(imgStr.split(",")[1]);
+        byte[] imgData = Base64.getDecoder().decode(imgStr.split(",")[1]);
         String dataFile = uploadTempFilePath + "/" + getTempFileRandomName();
         Path tempFile = Paths.get(dataFile);
         try {
-
             Files.createFile(tempFile);
+            System.out.println("Creating file: " + dataFile);
         } catch (FileAlreadyExistsException faeEx){
             //In the extremely unlikely event of a random file name collision, make another name
             //This will happen 1 out of every 4.76 * 10^28 iterations
@@ -91,5 +103,10 @@ public class FilePostHandler extends HandlerPrototype implements HttpHandler {
             salt.append(saltChars.charAt(index));
         }
         return salt.toString() + ".bin";
+    }
+
+    @Override
+    public Log toLog(){
+        return new Log();
     }
 }
